--- a/build.gradle
+++ b/build.gradle
@@ -1,63 +1,60 @@
 plugins {
-    id 'com.github.johnrengelman.shadow' version '7.1.2'
-    id 'io.micronaut.application' version '3.4.1'
-    id 'org.jetbrains.kotlin.jvm' version '1.7.0'
-    id 'org.jetbrains.kotlin.kapt' version '1.7.0'
-    id 'org.jetbrains.kotlin.plugin.allopen' version '1.7.0'
+    id("org.jetbrains.kotlin.jvm") version "1.6.21"
+    id("org.jetbrains.kotlin.kapt") version "1.6.21"
+    id("org.jetbrains.kotlin.plugin.allopen") version "1.6.21"
+    id("com.github.johnrengelman.shadow") version "7.1.2"
+    id("io.micronaut.application") version "3.4.1"
 }
 
-//apply plugin: jacoco
-
 version = "0.1"
-group = "test.api"
+group = "kotlin.test.api"
 
 repositories {
     mavenCentral()
 }
 
 dependencies {
-    annotationProcessor("io.micronaut:micronaut-http-validation")
-
-    implementation "io.micronaut:micronaut-http-client"
-    implementation "io.micronaut:micronaut-jackson-databind"
-    implementation "jakarta.annotation:jakarta.annotation-api"
-    implementation "io.micronaut:micronaut-validation"
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
-
+    kapt("io.micronaut:micronaut-http-validation")
+    implementation("io.micronaut:micronaut-http-client")
+    implementation("io.micronaut:micronaut-jackson-databind")
+    implementation("io.micronaut.kotlin:micronaut-kotlin-runtime")
+    implementation("jakarta.annotation:jakarta.annotation-api")
+    implementation("org.jetbrains.kotlin:kotlin-reflect:${kotlinVersion}")
+    implementation("org.jetbrains.kotlin:kotlin-stdlib-jdk8:${kotlinVersion}")
     runtimeOnly("ch.qos.logback:logback-classic")
+    implementation("io.micronaut:micronaut-validation")
 
-    kapt "io.micronaut:micronaut-inject-java"
-    kapt "io.micronaut:micronaut-validation"
+    runtimeOnly("com.fasterxml.jackson.module:jackson-module-kotlin")
 
-    kaptTest "io.micronaut:micronaut-inject-java-test"
 }
 
 
 application {
-    mainClass.set("test.api.Application")
+    mainClass.set("test.api.ApplicationKt")
 }
 java {
     sourceCompatibility = JavaVersion.toVersion("11")
-    targetCompatibility = JavaVersion.toVersion("11")
 }
 
+tasks {
+    compileKotlin {
+        kotlinOptions {
+            jvmTarget = "11"
+        }
+    }
+    compileTestKotlin {
+        kotlinOptions {
+            jvmTarget = "11"
+        }
+    }
+}
 graalvmNative.toolchainDetection = false
 micronaut {
     runtime("netty")
     testRuntime("junit5")
     processing {
         incremental(true)
-        annotations("test.api.*")
-    }
-}
-compileKotlin {
-    kotlinOptions {
-        jvmTarget = "1.8"
-    }
-}
-compileTestKotlin {
-    kotlinOptions {
-        jvmTarget = "1.8"
+        annotations("kotlin.test.api.*")
     }
 }
 
